--- a/gradle.properties
+++ b/gradle.properties
@@ -35,4 +35,5 @@ org.gradle.daemon=false
 gson_version=2.8.9
 antlr_version=4.9.3
 sqlite_version=3.46.1.0
-balm_version=1.0.0+1.20.1
+balm_version=1.0.3-SNAPSHOT
+foundation_version=1.0.1-SNAPSHOT
