--- a/common/build.gradle
+++ b/common/build.gradle
@@ -21,6 +21,7 @@ plugins {
     id 'org.spongepowered.gradle.vanilla'
 }
 base {
+    version="${mod_version}"
     archivesName = "${mod_name}-common-${minecraft_version}"
 }
 minecraft {
