--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'maven-publish'
 }
 base {
+    version="${mod_version}"
     archivesName = "${mod_name}-fabric-${minecraft_version}"
 }
 dependencies {
