--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 # Every field you add must be added to the root build.gradle expandProps map.
 
 # Project
-version=1.0.0
+mod_version=1.0.0
 group=com.holybuckets.orecluster
 
 # Common
