--- a/gradle.properties
+++ b/gradle.properties
@@ -30,10 +30,13 @@ description=An entry in Holy Bucket's Minecraft Forge mod series. Real time alte
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+org.gradle.java.home=C:/Program Files/Java/jdk-17
+java_version=17
+
 
 # Dependencies
 gson_version=2.8.9
 antlr_version=4.9.3
 sqlite_version=3.46.1.0
-balm_version=1.0.3-SNAPSHOT
-foundation_version=1.0.3-SNAPSHOT
+balm_version=1.0.4-SNAPSHOT
+foundation_version=1.0.5-SNAPSHOT
