--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 # Every field you add must be added to the root build.gradle expandProps map.
 
 # Project
-mod_version=1.0.0
+mod_version=1.0.3-SNAPSHOT
 group=com.holybuckets.orecluster
 
 # Common
@@ -38,5 +38,6 @@ java_version=17
 gson_version=2.8.9
 antlr_version=4.9.3
 sqlite_version=3.46.1.0
-balm_version=1.0.6-SNAPSHOT
-foundation_version=1.0.30-SNAPSHOT
+balm_version=7.3.15+1.20.1
+#balm_version=1.0.6-SNAPSHOT
+foundation_version=1.0.31-SNAPSHOT
