_updated gradle files to be able to build for release

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -53,8 +53,11 @@ publishing {
     }
     repositories {
         maven {
-            name = "localRelease"
+            name = "flatDirRelease"
             url = uri("${rootProject.findProperty("release_dir") ?: "$buildDir/published"}")
+            metadataSources {
+                artifact()
+            }
         }
     }
 }
