- ADded info file for commands - added info file for oreClusterApi - added dependencies to fabric and forge info files

--- a/build.gradle
+++ b/build.gradle
@@ -96,7 +96,10 @@ subprojects {
                 "mod_author": mod_author,
                 "mod_id": mod_id,
                 "license": license,
-                "description": project.description
+                "description": project.description,
+                "balm_version": project.balm_version,
+                "balm_version_range": project.balm_version_range,
+                "foundation_version": project.foundation_version
         ]
 
         filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/mods.toml', '*.mixins.json']) {
