--- a/gradle.properties
+++ b/gradle.properties
@@ -40,6 +40,7 @@ gson_version=2.8.9
 antlr_version=4.9.3
 sqlite_version=3.46.1.0
 balm_version=7.3.25+1.20.1
+balm_version_range=[7.3.25,)
 #balm_version=1.0.6-SNAPSHOT
 foundation_version=1.0.68-SNAPSHOT
 
