Fixed bug where blocks not placed in their default state were not picked up by chunk reading blocks - Addd utility methods to modded config to help determine when clusters spawn and if the level is correct for allowing cluster to spawn - updated fabric loader to 16.7 to support other fabric mods

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -24,3 +24,15 @@ mandatory = true
 versionRange = "${minecraft_version_range}"
 ordering = "NONE"
 side = "BOTH"
+[[dependencies.${mod_id}]]
+modId="balm"
+mandatory=true
+versionRange="${balm_version_range}"
+ordering="NONE"
+side="BOTH"
+[[dependencies.${mod_id}]]
+modId="hbs_foundation"
+mandatory=true
+versionRange="[${foundation_version},)"
+ordering="NONE"
+side="BOTH"
