--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 # Every field you add must be added to the root build.gradle expandProps map.
 
 # Project
-mod_version=1.1.0
+mod_version=1.1.1
 group=com.holybuckets.orecluster
 
 # Common
@@ -17,7 +17,7 @@ minecraft_version_range=[1.20.1, 1.21)
 
 # Fabric
 fabric_version=0.92.1+1.20.1
-fabric_loader_version=0.15.10
+fabric_loader_version=0.16.7
 loom_version=1.7-SNAPSHOT
 
 # Mod options
@@ -25,8 +25,8 @@ mod_name=HBs_Ore_Cluster_and_Regen
 mod_author=Holy_Buckets
 mod_id=hbs_ore_cluster_and_regen
 license=MIT
-description=Minecraft mod for generating large ore clusters with regeneration capabilities
-long_description=An entry in Holy Bucket's Minecraft Forge mod series. Real time altering of ore spawning in chunk generation to produce large and shaped clusters of ore that may also regenerate over time.
+description=Minecraft mod for generating large ore clusters that regenerate after several days
+long_description=Adds large clusters of ore to your world that regenerate over many days. An entry in Holy Bucket's Minecraft mod series. Real time altering of ore spawning to produce large and shaped clusters of ore in addition to vanilla style smaller veins.
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
@@ -42,7 +42,7 @@ sqlite_version=3.46.1.0
 balm_version=7.3.25+1.20.1
 balm_version_range=[7.3.25,)
 #balm_version=1.0.6-SNAPSHOT
-foundation_version=1.0.68-SNAPSHOT
+foundation_version=1.2.0
 
 # Publishing
 release_dir=C:/Users/jack/Desktop/docs/11_Minecraft/00-Releases
