--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 # Every field you add must be added to the root build.gradle expandProps map.
 
 # Project
-mod_version=1.3.0
+mod_version=1.3.2-SNAPSHOT
 group=com.holybuckets.orecluster
 
 # Common
@@ -39,10 +39,10 @@ java_version=17
 gson_version=2.8.9
 antlr_version=4.9.3
 sqlite_version=3.46.1.0
-balm_version=7.4.0-SNAPSHOT
-balm_version_range=[7.4.0-SNAPSHOT,)
+balm_version=7.3.34+1.20.1
+balm_version_range=[7.3.32,)
 #balm_version=1.0.6-SNAPSHOT
-foundation_version=1.2.9-SNAPSHOT
+foundation_version=1.2.49-SNAPSHOT
 
 # Publishing
 release_dir=C:/Users/jack/Desktop/docs/11_Minecraft/00-Releases
