--- a/gradle.properties
+++ b/gradle.properties
@@ -39,10 +39,10 @@ java_version=17
 gson_version=2.8.9
 antlr_version=4.9.3
 sqlite_version=3.46.1.0
-balm_version=7.3.34+1.20.1
+balm_version=7.3.37+1.20.1
 balm_version_range=[7.3.34,)
 #balm_version=1.0.6-SNAPSHOT
-foundation_version=1.3.0
+foundation_version=1.4.2-SNAPSHOT
 
 # Publishing
 release_dir=C:/Users/jack/Desktop/docs/11_Minecraft/00-Releases
