- Fixed bug with nonReplaceable blocks not acting in cluster generation thread in oreClusterGenerator method in oreClusterCalculator - added logic to oreClusterNonReplaceableBlocks config such that air is not a valid option if the cluster regenerates - removed sleep call in oreClusterManager expiration thread, causes lag since its run in main thread now

--- a/build.gradle
+++ b/build.gradle
@@ -99,7 +99,8 @@ subprojects {
                 "description": project.description,
                 "balm_version": project.balm_version,
                 "balm_version_range": project.balm_version_range,
-                "foundation_version": project.foundation_version
+                "foundation_version": project.foundation_version,
+                "foundation_version_min": project.foundation_version_min
         ]
 
         filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/mods.toml', '*.mixins.json']) {
