--- a/config/HBOreClustersAndRegenConfigsVanillaDefaults.json
+++ b/config/HBOreClustersAndRegenConfigsVanillaDefaults.json
@@ -13,7 +13,7 @@
             "oreClusterMinYLevelSpawn": -64000,
             "minChunksBetweenOreClusters": 0,
             "oreVeinModifier": 1.0,
-            "oreClusterNonReplaceableBlocks": "minecraft:end_portal_frame, minecraft:grass, minecraft:air, minecraft:dirt, minecraft:bedrock",
+            "oreClusterNonReplaceableBlocks": "minecraft:end_portal_frame, minecraft:grass, minecraft:dirt, minecraft:bedrock",
             "oreClusterReplaceableEmptyBlocks": "hbs_foundation:empty_block",
             "oreClusterDoesRegenerate": true
         },
@@ -38,7 +38,7 @@
             "oreClusterMinYLevelSpawn": -56,
             "minChunksBetweenOreClusters": 0,
             "oreVeinModifier": 1.0,
-            "oreClusterNonReplaceableBlocks": "minecraft:end_portal_frame, minecraft:air, minecraft:bedrock",
+            "oreClusterNonReplaceableBlocks": "minecraft:end_portal_frame, minecraft:bedrock",
             "oreClusterReplaceableEmptyBlocks": "minecraft:deepslate",
             "oreClusterDoesRegenerate": true
         },
@@ -63,7 +63,7 @@
             "oreClusterMinYLevelSpawn": -64000,
             "minChunksBetweenOreClusters": 0,
             "oreVeinModifier": 1.0,
-            "oreClusterNonReplaceableBlocks": "minecraft:end_portal_frame, minecraft:grass, minecraft:air, minecraft:dirt, minecraft:bedrock",
+            "oreClusterNonReplaceableBlocks": "minecraft:end_portal_frame, minecraft:grass, minecraft:dirt, minecraft:bedrock",
             "oreClusterReplaceableEmptyBlocks": "minecraft:stone, minecraft:stone, minecraft:air",
             "oreClusterDoesRegenerate": false
         },
@@ -88,7 +88,7 @@
             "oreClusterMinYLevelSpawn": -56,
             "minChunksBetweenOreClusters": 0,
             "oreVeinModifier": 1.0,
-            "oreClusterNonReplaceableBlocks": "minecraft:end_portal_frame, minecraft:air, minecraft:bedrock",
+            "oreClusterNonReplaceableBlocks": "minecraft:end_portal_frame, minecraft:bedrock",
             "oreClusterReplaceableEmptyBlocks": "minecraft:deepslate_redstone_ore, minecraft:deepslate_diamond_ore, minecraft:deepslate_emerald_ore, minecraft:deepslate, minecraft:deepslate, minecraft:deepslate, minecraft:deepslate, minecraft:deepslate, minecraft:deepslate",
             "oreClusterDoesRegenerate": false
         }
