--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -33,6 +33,6 @@ side="BOTH"
 [[dependencies.${mod_id}]]
 modId="hbs_foundation"
 mandatory=true
-versionRange="[${foundation_version},)"
+versionRange="[${foundation_version_min},)"
 ordering="NONE"
 side="BOTH"
