--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 # Every field you add must be added to the root build.gradle expandProps map.
 
 # Project
-mod_version=1.4.0
+mod_version=1.4.2
 group=com.holybuckets.orecluster
 
 # Common
@@ -40,9 +40,10 @@ gson_version=2.8.9
 antlr_version=4.9.3
 sqlite_version=3.46.1.0
 balm_version=7.3.37+1.20.1
-balm_version_range=[7.3.34,)
+balm_version_range=[7.3.37,)
 #balm_version=1.0.6-SNAPSHOT
-foundation_version=1.4.2-SNAPSHOT
+foundation_version=1.4.9
+foundation_version_min=1.4.0
 
 # Publishing
 release_dir=C:/Users/jack/Desktop/docs/11_Minecraft/00-Releases
